# pyMalleableC2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
examples/: build.py  builder.py  parser.py  randomizer.py  urlgrep.py
malleablec2/: __init__.py  components.py  grammar.lark  randomizer.py
tests/: template.profile  test_builder.py  test_parser.py
tests/profiles/: amazon.profile  reference.profile  template.profile
