[tool.poetry]
name = "pyMalleableC2"
version = "0.1.0"
description = "Python library that allows you to parse and build Cobalt Strike Malleable C2 Profiles programmatically."
authors = ["Marcello Salvati <marcello@porchetta.industries>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/Porchetta-Industries/pyMalleableC2"
repository = "https://github.com/Porchetta-Industries/pyMalleableC2"
exclude = ["tests/", "examples/"]
include = ["README.md", "LICENSE", "malleablec2/grammar.lark"]
classifiers = [
    "Topic :: Security",
]

packages = [
    { include = "malleablec2"}
]

[tool.poetry.dependencies]
python = "^3.6"
lark-parser = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "^20.8b1"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
